# coffe-shop-text2sql-chatbot

./: .env.example  .gitignore  README.md  etl_coffe_shop.py  pyproject.toml  schema.sql  server.py
app/: main.py
app/api/: deps.py
app/api/routes/: chat.py  health.py
app/core/: config.py  database.py  llm_client.py  memory_manager.py  query_processor.py  vector_store.py
app/models/: database.py  schemas.py
app/services/: __init__.py  clarification_service.py  retrieval_service.py  schema_extractor.py  sql_executor.py
data/: initial_vector_data.csv
